--- a/package.json
+++ b/package.json
@@ -8,9 +8,22 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server"
   },
-  "author": "",
+  "author": "MusfiqRaihan",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.3.0"
-  }
+    "lite-server": "^2.5.4"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MusfiqRaihan/conFusion.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MusfiqRaihan/conFusion/issues"
+  },
+  "homepage": "https://github.com/MusfiqRaihan/conFusion#readme"
 }
